﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.14...]
### 2020-10-06
	Changed: Internet outage notification has longer cooldown. TODO: Make this configurable.
### 2020-08-29
	Fixed: Win7 was reported as only supported platform in app.config when this had not been the case for a while (Win10 is now that).
	Fixed: Problems enabling audio control.
	Fixed: Updated code to correctly operate in 64 bit mode and not in legacy 32 bit mode. (reported by Chairkicker Nick as problems with power manager)
	Internal: Various adjustments that should not affect end-users.
### 2020-07-08
	Changed: Reduce some debug output.
### 2020-07-07
	Fixed: Network status logging was not ignoring duplicate reports properly.
	Changed: Attempt to make things smarter with audio device handling.
### 2020-06-29
	Fixed: DynDNS debug output was confused.
	Removed: Don't complain about watchlist rules with insufficient actions. This was done poorly.
	Removed: Don't complain about bad devices by default. Requires audio debug now. Only number of bad devices are output normally.
### 2020-06-26
	Fixed: Smart path didn't format non-filtered paths correctly due to peculiarity of System.IO.Path.Combine.
	Fixed: DNS update failed if it was not previously reported.
### 2020-06-12
	Fixed: Volume adjustments now properly format path as per watchlist rules in all circumstances.
	Fixed: Error when manual control is used in power manager.
### 2020-06-07
	Added: Save debug settings option to the UI so it saves the current debug state.
### 2020-06-05
	Changed: Several internal changes to IPC, modules, number formatting, and others. These should have no notable end-user impact.
	Fixed: Window re-opening was broken by above change.
### 2020-05-29
	Fixed: Smart path was not working correctly.
### 2020-05-24
	Removed: Ideal affinity experiment. Deemed to have no notable impact.