@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2020-11-16
+	Changed: Removed the deprecated Serilog.RollingFile dependency and moved to use Serilog.File for the same purpose.
 ### 2020-10-06
 	Changed: Internet outage notification has longer cooldown. TODO: Make this configurable.
 ### 2020-08-29
